--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,10 @@
 html{
-    height: 100%;
+
     background: radial-gradient(circle, #fff, #ccc);
+    height: 20%;
+    position: initial;
+    
+    
     /* background: -webkit-radial-gradient(circle, #fff, #ccc);   
     background: -o-radial-gradient(circle, #fff, #ccc);   
     background: -moz-radial-gradient(circle, #fff, #ccc); */
@@ -142,7 +146,8 @@ html{
     position: absolute;
     top: 510px;
     right: 2em;
-    visibility: hidden;
+    /* visibility: hidden; */
+    display: none;
 }
 #gameover{
     height: 380px;
@@ -153,9 +158,8 @@ html{
     text-align: center;
     text-transform: uppercase;
     position: absolute;
-    
     top: 75px;
     left: 1.4em;
     z-index: 2;
-    /* display: none; */
+    display: none;
 }
