--- a/styling.css
+++ b/styling.css
@@ -80,7 +80,6 @@ html{
     width: 550px;
     height: 50em;
     margin: 0% 10% 0% 10%;
-    /* text-align: center; */
 }
 .box{
     width: 15%;
@@ -133,7 +132,7 @@ html{
     color: white;
     box-shadow: 0px 5px #0741a0de;
 }
-#timer{
+#timeremaining{
     background-color: rgba(246, 37, 37, 0.644);
     cursor: pointer;
     text-align: center;
